<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuIconic" >

    <!-- plantilla linia menú  
    <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content" >

           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_gravity="center_vertical"
               android:layout_weight="1"
               android:orientation="vertical" >

               <ImageButton
                   android:id="@+id/imageButton1"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:src="@drawable/boto_vermell" />

               <TextView
                   android:id="@+id/textView1"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:text="TextView" />

           </LinearLayout>

           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:orientation="vertical" >

               <ImageButton
                   android:id="@+id/imageButton2"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:src="@drawable/boto_vermell" />

               <TextView
                   android:id="@+id/textView2"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:text="TextView" />

           </LinearLayout>

       </LinearLayout>
       --> 
       
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content" >

           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_gravity="center_vertical"
               android:layout_weight="1"
               android:orientation="vertical" >

               <ImageButton
                   android:id="@+id/imgArticle"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:src="@drawable/iconaarticle" />

               <TextView
                   android:id="@+id/textView1"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:text="@string/Article" />

           </LinearLayout>

           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:orientation="vertical" >

               <ImageButton
                   android:id="@+id/imgVideo"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:src="@drawable/iconavideos" />

               <TextView
                   android:id="@+id/textView2"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:text="@string/llistaVideos" />

           </LinearLayout>

       </LinearLayout>
    
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content" >

           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:orientation="vertical" >

               <ImageButton
                   android:id="@+id/imgValor"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:src="@drawable/iconavalora" />

               <TextView
                   android:id="@+id/textView3"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:text="@string/valorar" />

           </LinearLayout>

           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:orientation="vertical" >

               <ImageButton
                   android:id="@+id/imgVeuVar"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:src="@drawable/iconaveuval" />

               <TextView
                   android:id="@+id/textView4"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:text="@string/veureValoracions" />
           </LinearLayout>
       </LinearLayout>
       
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content" >
           
           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:orientation="vertical" >

               <ImageButton
                   android:id="@+id/imgGaleria"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:src="@drawable/iconagaleria"
                   android:contentDescription="@string/app_name" />

               <TextView
                   android:id="@+id/textView5"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:text="@string/galeria" />

           </LinearLayout>
           
           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:orientation="vertical" >

               <TextView
                   android:id="@+id/txt12"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                    />

               <TextView
                   android:id="@+id/txt13"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:text="" />
           </LinearLayout>
           
       </LinearLayout>

</LinearLayout>
